--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <li><i class="fab fa-node-js"></i> Node.js</li>
         <li><i class="fab fa-node-js"></i> Express.js</li>
         <li><i class="fab fa-python"></i> Python</li>
+        <li><i class="fab fa-python"></i> Ruby on Rails</li>
         <li><i class="fas fa-database"></i> SQL</li>
         <li><i class="fab fa-aws"></i> AWS</li>
       </ul>
@@ -166,8 +167,18 @@
     <div>
       <p class="header">EXPERIENCE</p>
       <p class="work bold2 op8">Great Lakes E-Learning Services</p>
-      <p class="op6 desn">September 2023 - PRESENT - Associate SDE</p>
-      <p class="blt">• Contributed to key content consumption platform
+      <p class="op6 desn">SEPTEMBER 2023 - MARCH 2025 - Associate SDE</p>
+      <p class="blt">• Implemented lazy loading in web app, improving<span class="bold"> page loads time by 50%</span>
+      </p>
+      <p class="blt">• Developed Notification Center system, increasing<span class="bold"> user engagement by 38%</span>
+      </p>
+      <p class="blt">• Refactored legacy mobile app pages, improving<span class="bold"> performance by 90%</span>
+      </p>
+      <p class="blt">• Developed and maintained prime <span class="bold">user facing pages</span> in React Native app greatly increasing mobile app usage.
+      </p>
+      <p class="blt">• Fixed <span class="bold">critical bugs</span> in React Native app and web app.
+      </p>
+      <p class="blt">• Fixed numerous component and backend bugs  
       </p>
       <div style="height: 1rem;"></div>
       <p class="work bold2 op8">Medbikri Technologies Pvt Ltd., Remote</p>
