added mizu reference

--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
     <div style="height: 1rem;"></div>
     <div>
       <p class="header">PROJECTS</p>
+      <p class="work op8"><span class="bold2">Mizu</span> - Offline CBZ reader for Android | <a class="blue"
+          href="https://github.com/dietpizza/mizu2">github.com/dietpizza/mizu2</a></p>
+      <p class="blt">• Built with <span class="bold">Kotlin </span> for native performance.</p>
+      <p class="blt">• Implemented <span class="bold">Custom RecyclerView</span> with zoom and pan support.</p>
+      <p class="blt">• Most importantly... its FAST!</p>
+      <div style="height: 6px"></div>
       <p class="work op8"><span class="bold2">Velcro</span> - Lightweight Aria2 WebUI built with <span
           class="bold">React</span> and <span class="bold">Tailwind CSS.</span> |
         <a class="blue" href="https://github.com/dietpizza/velcro">github.com/dietpizza/velcro</a>
@@ -217,12 +223,6 @@
 
       <p class="blt">• Established <span class="bold">role-based access control</span> to manage endpoint permissions
         effectively.</p>
-      <div style="height: 6px"></div>
-      <p class="work op8"><span class="bold2">XLaunch</span> - SpaceX launch data app. | <a class="blue"
-          href="https://github.com/dietpizza/xlaunch">github.com/dietpizza/xlaunch</a></p>
-      <p class="blt">• Developed using <span class="bold">React Native</span> for a seamless mobile application.</p>
-      <p class="blt">• Integrated <span class="bold">SpaceX APIs</span> to provide real-time data for an enriched user
-        experience.</p>
       <div style="height: 6px"></div>
     </div>
     <div style="height: 1rem;"></div>
